# msc-thesis

./: README.md  setup.cfg
analysis/brick_circuits/: cap_res_cap.py  transmon_grid.py  triple_qubit.py  xmon_cap_diff.csv  xmon_cap_hfss.csv  xmon_cap_q3d.csv  xmon_fit_q3d.py
analysis/coupling/: ideal_TL_coupler.py  ideal_TL_full_transfer.npy  tunable_coupler.py  xmon_chain.py
analysis/fitting/: brick_fitting.py  chain_fitting.py  ideal_TL_coupler_fit.py
analysis/lumped_circuits/: 2_port_1_res.py  3_port_2_res.py  5_port_10_res_rand.py  5_port_35_res_rand.py  banded_cap.py  ideal_TL_shunt_cap.py  lumped_circuit_decay.py  only_dc_pole_cascade.py  tetrahedron_pole_shift.py
models/ansys/: cap_res_cap.aedt  cpw5.aedt  cpw55.aedt  cpw6.aedt  cpw65.aedt  cpw9.aedt  cpw95.aedt  finger_cap.aedt  straight.aedt  tcouple.aedt  transmon2.aedt  xmon.aedt  xmon_cap.csv
src/tools/analysis/: transmon_network.py
src/tools/circuits/: capacitance.py  impedance.py  interconnects.py  lumped_circuits.py  multiports.py  transmission_line.py
src/tools/fitting/: VFWrapper.m  vector_fitting.py
thesis/: main.tex  references.bib
thesis/backmatter/: acknowledgements.tex  appendix.tex
thesis/frontmatter/: abstract.tex  titlepage.tex
thesis/mainmatter/ch1/: chapter1.tex
thesis/mainmatter/ch2/: chapter2.tex  immittance_scattering.tex  interconnects.tex  lossless_impedance.tex  vector_fitting.tex
thesis/mainmatter/ch3/: chapter3.tex  external_ports.tex  transmon_network_hamiltonian.tex
thesis/mainmatter/ch4/: chapter4.tex  electromagnetic.tex  lumped_distributed.tex
(+3 files in other folders)
