[metadata]
name = tools
author = Fadi Wassaf
author_email = fadi.wassaf@rwth-aachen.de

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    matplotlib
    scipy
    scikit-rf
    qutip
    matlabengine # Only include if matlab is installed and needed for vector fitting
    tqdm
    pytest
    scienceplots
    networkx
    ipykernel

[options.packages.find]
where=src